<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/cream_white"
    tools:context=".ui.main.MainActivity">

    <!-- App bar layout-->
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/mt_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/green"
            app:titleTextColor="@color/white"
            app:title="@string/title_appbar"/>
    </com.google.android.material.appbar.AppBarLayout>

    <!-- Search Bar -->
    <com.google.android.material.search.SearchBar
        android:id="@+id/sb_searchbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:hint="@string/hint"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
    </com.google.android.material.search.SearchBar>

    <!-- Search View -->
    <com.google.android.material.search.SearchView
        android:id="@+id/sv_searchview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_recycleview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="85dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
    
    <ProgressBar
        android:id="@+id/pb_progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="?android:attr/progressBarStyle"
        android:layout_gravity="center"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/tv_textviewempty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        android:text="@string/user_empty"/>



</androidx.coordinatorlayout.widget.CoordinatorLayout>